[package]

name = "nibble_vec"
version = "0.0.4"
description = "Vector data-structure for half-byte values."

license = "MIT"
authors = ["Michael Sproul <micsproul@gmail.com>"]

repository = "https://github.com/michaelsproul/rust_nibble_vec"
documentation = "https://docs.rs/rust_nibble_vec"
readme = "README.md"

keywords = ["vector", "nibble", "slice", "data-structure", "collection"]
categories = ["data-structures"]

[badges]
travis-ci = { repository = "michaelsproul/rust_nibble_vec" }

[features]
default = []
sgx = ["sgx_tstd"]

[dependencies]
sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", package="sgx_tstd", optional=true  }
